Bug 239361 - intranet:kword:msoffice2003: Inserted symbols are not shown in kword
Summary: intranet:kword:msoffice2003: Inserted symbols are not shown in kword
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: doc (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-14 14:10 UTC by Lassi Nieminen
Modified: 2012-01-23 19:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testdata to be opened in kword (44.00 KB, application/msword)
2009-12-14 14:10 UTC, Lassi Nieminen
Details
screenshot of the document in kword (144.99 KB, image/x-png)
2009-12-14 14:12 UTC, Lassi Nieminen
Details
screenshot of the document in msword (54.57 KB, image/x-png)
2009-12-14 14:13 UTC, Lassi Nieminen
Details
pyodconverter converted testdata (19.23 KB, application/x-zip-compressed)
2010-03-05 15:15 UTC, Lassi Nieminen
Details
koconverter converted testdata (3.85 KB, application/x-zip-compressed)
2010-03-05 15:15 UTC, Lassi Nieminen
Details
pyodconverter converted testdata opened in koffice screenshot (168.94 KB, image/png)
2010-03-05 15:15 UTC, Lassi Nieminen
Details
koconverter converted testdata opened in openoffice screenshot (101.46 KB, image/png)
2010-03-05 15:16 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-05-28 03:15:34 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2009-12-14 15:10:16 +0200 ----

Created an attachment
testdata to be opened in kword

SOFTWARE VERSION:
  Kubuntu 9.04
  Koffice (svn version 1061008)
  Test document (MS Word 2003): inserted_color_symbols.doc

STEPS LEADING TO THE PROBLEM:
  1. Open the attached document in MS Word 2003.
  2. Open the same document in KOffice.
  3. Observe the symbols inserted in the first page of the document.
     Insert->symbol

EXPECTED OUTCOME:
  Inserted symbols should be shown in the document.
  see attachment colored_inserted_symbols.PNG

ACTUAL OUTCOME:
  Inserted symbols are not shown in the document. Nothing
  is shown in the place of inserted symbols.
  see attachment colored_inserted_symbols_kword.png

FREQUENCY:
  Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-14 15:12:59 +0200 ----

Created an attachment
screenshot of the document in kword



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-14 15:13:30 +0200 ----

Created an attachment
screenshot of the document in msword



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-01-14 16:47:19 +0200 ----

Setting priority: Internal Test documents



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-05 16:15:15 +0200 ----

Created an attachment
pyodconverter converted testdata



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-05 16:15:30 +0200 ----

Created an attachment
koconverter converted testdata



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-05 16:15:47 +0200 ----

Created an attachment
pyodconverter converted testdata opened in koffice screenshot



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-05 16:16:27 +0200 ----

Created an attachment
koconverter converted testdata opened in openoffice screenshot

Observation (rev 1096327) : KO loaded OO converted document correctly.



--- Bug imported by faure@kde.org 2010-05-28 03:15  ---

This bug was previously known as _bug_ 150633.

Imported an attachment (id=45270)
Imported an attachment (id=45271)
Imported an attachment (id=45272)
Imported an attachment (id=45273)
Imported an attachment (id=45274)
Imported an attachment (id=45275)
Imported an attachment (id=45276)
Comment 1 Halla Rempt 2010-05-31 10:31:16 UTC
Change severity from major to normal, since we usually use only crash, normal and wish.
Comment 2 Halla Rempt 2010-05-31 10:45:02 UTC
Change severity from major to normal.
Comment 3 Matus Uzak 2012-01-23 19:53:36 UTC
commit	ad71db8e88524946bcf65243fdd4762d967f5d16
doc: Added support of the "Symbol" special character.