doc: Added support of the "Symbol" special character.

BUG:239361